add sign in page. working with google + oauth

--- a/real-chat-app/src/index.html
+++ b/real-chat-app/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>RealChatApp</title>
   <base href="/">
-
+  <meta name="google-signin-client_id" content="546854662215-mmnqq81j1bk4k1nf8jn1flugnf9eik28.apps.googleusercontent.com">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
